# pyx-auth-action

./: Makefile  README.md  action.py  action.yml  pyproject.toml  test.py
.github/: dependabot.yml  pinact.yml
.github/workflows/: lint.yml  test.yml  zizmor.yml
