[project]
name = "pyx-auth-action"
version = "0.0.10"
description = "Get a temporary access token to a pyx registry with Trusted Publishing."
readme = "README.md"
dependencies = [
    "id",
    "msgspec>=0.21.1",
    "packaging>=25.0",
    "rfc3986>=2.0.0",
    "urllib3",
]
requires-python = ">=3.12"
classifiers = [
    # This is a GitHub Action, not a PyPI package.
    "Private :: Do Not Upload",
]

[dependency-groups]
dev = [
 "pytest>=9.0.3",
 "ruff>=0.15.10",
 "ty>=0.0.29",
]
